feat: add daily check-in feature with mock authentication

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name='fc:frame' content='{"version":"next","imageUrl":"https://social-fi-alpha.vercel.app/image.png","aspectRatio":"3:2","button":{"title":"Claim Point Daily","action":{"type":"launch_frame","name":"launch","url":"https://social-fi-alpha.vercel.app","splashImageUrl":"https://social-fi-alpha.vercel.app/splash.png","splashBackgroundColor":"#eeccff"}}}' />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
